# maudit

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCS_REVIEW.md  LICENSE  README.md  SECURITY.md  example_new_api.rs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yaml  labeler.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml
.github/workflows/: benchmark.yaml  ci.yaml  label.yml  release.yml
.sampo/: config.toml
.sampo/changesets/: ancient-baroness-vipunen.md  ancient-guardian-tuulikki.md  ardent-seer-tapio.md  bold-baroness-joukahainen.md  bold-guardian-lemminkainen.md  bold-iceseeker-tursas.md  bold-knight-aino.md  bold-prince-tursas.md  cantankerous-duchess-ahti.md  cantankerous-queen-aurelien.md  cantankerous-wavetamer-akka.md  cranky-runesinger-vipunen.md  cranky-sage-tursas.md  cunning-baron-lempo.md  dashing-windweaver-tuulikki.md  doughty-forgemaster-ahti.md  doughty-iceseeker-vainamoinen.md  doughty-lord-vainamoinen.md  doughty-warden-erika.md  fearless-warden-tuoni.md  forthright-king-ilmatar.md  gallant-guardian-otso.md  gallant-knight-louhi.md  gallant-wavetamer-nyyrikki.md  grumpy-earl-vainamoinen.md  grumpy-windweaver-kalma.md  haughty-duchess-otso.md  haughty-forgemaster-aurelien.md  heroic-iceseeker-nyyrikki.md  heroic-wolfkin-ahti.md  jovial-firebringer-aurelien.md  jovial-forgemaster-hiisi.md  jovial-thunderbearer-kullervo.md  jovial-witch-aino.md  keen-templeward-vellamo.md  majestic-duchess-kalma.md  majestic-seer-vipunen.md  noble-count-ilmatar.md  noble-earl-ilmarinen.md  noble-lady-tuonetar.md  (+23 more)
.zed/: settings.json
assets/: README.md
benchmarks/: README.md
benchmarks/incremental/: Cargo.toml
benchmarks/incremental/benches/: build.rs
benchmarks/md-benchmark/: CHANGELOG.md  Cargo.toml  README.md
benchmarks/overhead/: Cargo.toml  README.md
benchmarks/realistic-blog/: Cargo.toml  README.md
benchmarks/realistic-blog/benches/: build.rs
benchmarks/realistic-blog/content/articles/: eighteenth-post.md  eighth-post.md  eleventh-post.md  fifteenth-post.md  fifth-post.md  first-post.md  fourteenth-post.md  fourth-post.md  nineteenth-post.md  ninth-post.md  second-post.md  seventeenth-post.md  seventh-post.md  sixteenth-post.md  sixth-post.md  tenth-post.md  third-post.md  thirteenth-post.md  thirtieth-post.md  thirty-fifth-post.md  thirty-first-post.md  thirty-fourth-post.md  thirty-second-post.md  thirty-sixth-post.md  thirty-third-post.md  twelfth-post.md  twentieth-post.md  twenty-eighth-post.md  twenty-fifth-post.md  twenty-first-post.md  twenty-fourth-post.md  twenty-ninth-post.md  twenty-second-post.md  twenty-seventh-post.md  twenty-sixth-post.md  twenty-third-post.md
benchmarks/realistic-blog/src/: content.rs  layout.rs  lib.rs  main.rs  style.css
benchmarks/realistic-blog/src/routes/: article.rs  index.rs
crates/cli/: Cargo.toml
crates/cli/src/: build.rs  dev.rs  init.rs  logging.rs  main.rs  main_test.rs
crates/cli/src/dev/: client.js  filterer.rs  ipc.rs  server.rs
crates/cli/src/init/: names.rs
crates/cli/src/preview/: server.rs
crates/framework/: Cargo.toml
crates/framework/src/: assets.rs  build.rs  content.rs  errors.rs  ipc.rs  lib.rs  logging.rs  page.rs  params.rs  routes.rs  trying.rs
crates/framework/src/content/: components.rs  highlight.rs  markdown.rs  slugger.rs
crates/framework/src/templating/: maud_ext.rs
crates/ipc-messages/: Cargo.toml
crates/macros/: Cargo.toml
crates/maudit/: CHANGELOG.md  Cargo.toml  tsconfig.json
crates/maudit-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  tsconfig.json
crates/maudit-cli/js/: client.ts  overlay.ts  utils.ts
crates/maudit-cli/src/: consts.rs  dev.rs  init.rs  logging.rs  main.rs  preview.rs  server_utils.rs
crates/maudit-cli/src/dev/: 404.html  build.rs  client.js  dep_tracker.rs  filterer.rs  headers_file.rs  server.rs
crates/maudit-cli/src/dev/js/: client.ts  overlay.ts  utils.ts
crates/maudit-cli/src/init/: render_config.rs
crates/maudit-cli/src/preview/: server.rs
crates/maudit-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/maudit-md-benchmark/: Cargo.toml
crates/maudit/js/: prefetch.ts
crates/maudit/js/prefetch/: hover.ts  tap.ts  viewport.ts
crates/maudit/src/: assets.rs  build.rs  content.rs  errors.rs  feed.rs  fonts.rs  lib.rs  logging.rs  page.rs  pwa.rs  route.rs  routing.rs  sitemap.rs  templating.rs
crates/maudit/src/assets/: asset_url.rs  css.rs  image.rs  image_cache.rs  node_sidecar.rs  prefetch.rs  pwa.rs  sanitize_filename.rs  script.rs  style.rs  tailwind.rs
crates/maudit/src/content/: components.rs  highlight.rs  markdown.rs  tracked.rs
crates/maudit/src/content/markdown/: components.rs  shortcodes.rs  shortcodes_tests.rs
crates/maudit/src/templating/: maud_ext.rs
crates/maudit/tests/: incremental.rs
crates/md-benchmark/: Cargo.toml  README.md
crates/oubli/: CHANGELOG.md  Cargo.toml  README.md
crates/user-build-script/: Cargo.toml
crates/user-example/: Cargo.toml
e2e/: README.md  package.json  playwright.config.ts  tsconfig.json  types.d.ts
e2e/tests/: hot-reload.spec.ts  incremental-build.spec.ts  prefetch.spec.ts  prerender.spec.ts  pwa.spec.ts  test-utils.ts  utils.ts
examples/: README.md
examples/basics/: CHANGELOG.md  Cargo.toml
examples/blog/: CHANGELOG.md  Cargo.toml
examples/empty/: CHANGELOG.md  Cargo.toml
examples/i18n/: Cargo.toml  README.md  test_errors.txt
examples/image-processing/: CHANGELOG.md  Cargo.toml
examples/kitchen-sink/: CHANGELOG.md  Cargo.toml  README.md  tailwind.config.js
examples/markdown-components/: CHANGELOG.md  Cargo.toml
examples/oubli-basics/: CHANGELOG.md  Cargo.toml
examples/runtime-to-the-max/: Cargo.toml  pages.txt
website/: CHANGELOG.md  Cargo.toml  build.rs  package.json  tailwind.config.js
website/assets/: docs-sidebar.ts  prin.css
website/src/: content.rs  layout.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+155 files in other folders)
