[workspace]
members = ["crates/*", "benchmarks/*", "examples/*", "website"]
resolver = "2"

[workspace.dependencies]
maudit = { path = "crates/maudit", version = "*" }
oubli = { path = "crates/oubli", version = "*" }
maud = { version = "0.26.0" }
serde = { version = "1.0.216" }

[profile.dev]
debug = 0
strip = "debuginfo"
