[workspace]
members = ["crates/*", "benchmarks/*", "examples/*", "website", "xtask", "e2e/fixtures/*"]
resolver = "3"

[workspace.dependencies]
maudit = { path = "crates/maudit", version = "*" }
oubli = { path = "crates/oubli", version = "*" }
maud = { version = "0.27.0" }
serde = { version = "1.0.228" }

[profile.profiling]
inherits = "release"
debug = true
