[package]
name = "maudit-cli"
description = "CLI to operate on maudit projects."
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
log = { version = "0.4", features = ["kv"] }
env_logger = "0.11.5"
chrono = "0.4.39"
colored = "2.2.0"
clap = { version = "4.5.23", features = ["derive"] }
