[package]
name = "maudit-cli"
description = "CLI to operate on maudit projects."
version = "0.3.1"
license = "MIT"
edition = "2021"

[[bin]]
name = "maudit"
path = "src/main.rs"

[dependencies]
log = { version = "0.4", features = ["kv"] }
env_logger = "0.11.5"
chrono = "0.4.39"
colored = "2.2.0"
clap = { version = "4.5.23", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8.1", features = ["ws"] }
tokio-tungstenite = { version = "0.26.0" }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
http-body-util = "0.1.0"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
watchexec = "5.0.0"
watchexec-events = "4.0.0"
inquire = "0.7.5"
rand = "0.9.0"
spinach = "3"
ureq = "3.0.5"
tar = "0.4.43"
toml_edit = "0.22.23"
local-ip-address = "0.6.3"
flate2 = "1.0.35"
