[package]
name = "maudit"
description = "Framework for generating static websites."
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
maud = { workspace = true }
maudit-macros = { path = "../macros", version = "0.1" }
log = { version = "0.4", features = ["kv"] }
env_logger = "0.11.5"
chrono = "0.4.39"
colored = "2.2.0"
rayon = "1.10.0"
rustc-hash = "2.1"
dyn-eq = "0.1.3"
rolldown = { git = "https://github.com/rolldown/rolldown", version = "0.1.0", rev = "f9fc700f00b9a4ef3659c70d2be4d7cd61b492c8" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.9"
lol_html = "2.1.0"
glob = "0.3.1"
serde = { workspace = true }
serde_yml = "0.0.12"
ipc-channel = "0.19.0"
maudit-ipc = { path = "../ipc-messages", version = "0.1" }
pulldown-cmark = "0.12.2"
