[package]
name = "maudit"
description = "Framework for generating static websites."
version = "0.1.0"
license = "MIT"
edition = "2021"

[features]
default = ["maud", "ipc"]
maud = ["dep:maud"]
ipc = ["maudit-ipc", "ipc-channel"]

[dependencies]
# Optional
maud = { workspace = true, optional = true }
ipc-channel = { version = "0.19.0", optional = true }
maudit-ipc = { path = "../ipc-messages", version = "0.1", optional = true }

# TODO: Allow making those optional
rolldown = { git = "https://github.com/rolldown/rolldown", version = "0.1.0", rev = "f9fc700f00b9a4ef3659c70d2be4d7cd61b492c8" }
serde = { workspace = true }
serde_yml = "0.0.12"
pulldown-cmark = "0.12.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
glob = "0.3.1"

maudit-macros = { path = "../macros", version = "0.1" }
log = { version = "0.4", features = ["kv"] }
env_logger = "0.11.5"
chrono = "0.4.39"
colored = "2.2.0"
rustc-hash = "2.1"
dyn-eq = "0.1.3"
thiserror = "2.0.9"
lol_html = "2.1.0"
