[package]
name = "maudit"
description = "Library for generating static websites."
version = "0.2.0"
license = "MIT"
edition = "2021"

[features]
default = ["maud"]
maud = ["dep:maud"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Optional
maud = { workspace = true, optional = true }

# TODO: Allow making those optional
rolldown = { package = "maudit_rolldown", version = "0.1.0" }
serde = { workspace = true }
serde_yml = "0.0.12"
pulldown-cmark = "0.12.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
glob = "0.3.1"

maudit-macros = { path = "../macros", version = "0.2" }
log = { version = "0.4", features = ["kv"] }
env_logger = "0.11.5"
chrono = "0.4.39"
colored = "2.2.0"
rustc-hash = "2.1"
dyn-eq = "0.1.3"
thiserror = "2.0.9"
lol_html = "2.1.0"
