[package]
name = "maudit-cli"
description = "CLI to operate on maudit projects."
version = "0.5.0"
license = "MIT"
edition = "2021"

[[bin]]
name = "maudit"
path = "src/main.rs"

[dependencies]
chrono = "0.4.39"
colored = "2.2.0"
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum = { version = "0.8.1", features = ["ws"] }
futures = "0.3"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "=0.3.19", features = [
    "env-filter",
    "chrono",
] }
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
inquire = "0.7.5"
rand = "0.9.0"
spinach = "3"
ureq = "3.0.5"
tar = "0.4.43"
toml_edit = "0.22.23"
local-ip-address = "0.6.3"
flate2 = "1.0.35"
quanta = "0.12.6"
serde_json = "1.0"
tokio-util = "0.7"

[build-dependencies]
rolldown = { package = "brk_rolldown", version = "0.1.4" }
tokio = { version = "1", features = ["rt"] }