[package]
name = "maudit-cli"
description = "CLI to operate on maudit projects."
version = "0.6.2"
license = "MIT"
edition = "2024"
include = ["js/dist/**/**", "src/**", "Cargo.toml", "Cargo.lock", "CHANGELOG.md"]

[[bin]]
name = "maudit"
path = "src/main.rs"

[dependencies]
chrono = "0.4.43"
colored = "3.1.1"
clap = { version = "4.5.54", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process"] }
axum = { version = "0.8.8", features = ["ws"] }
futures = "0.3"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "chrono"] }
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
inquire = "0.9.2"
rand = "0.9.2"
spinach = "3"
ureq = "3.1.4"
tar = "0.4.44"
toml_edit = "0.24.0"
local-ip-address = "0.6.9"
flate2 = "1.1.8"
quanta = "0.12.6"
serde_json = "1.0"
tokio-util = "0.7"
cargo_metadata = "0.23.1"
