[package]
name = "maudit"
description = "Library for generating static websites."
documentation = "https://docs.rs/maudit"
homepage = "https://maudit.org"
repository = "https://github.com/bruits/maudit"
version = "0.6.4"
license = "MIT"
edition = "2024"
rust-version = "1.89.0"

[features]
default = ["maud"]
maud = ["dep:maud"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Optional
maud = { workspace = true, optional = true }

# TODO: Allow making those optional
rolldown = { package = "brk_rolldown", version = "0.2.3" }
serde = { workspace = true }
serde_yaml = "0.9.34"
pulldown-cmark = "0.12.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
glob = "0.3.1"
syntect = "5.0"
lol_html = "2.1.0"
slug = "0.1.6"
image = "0.25.6"
webp = "0.3.1"
oxipng = "9.1.5"
thumbhash = "0.1.0"
base64 = "0.22.1"

maudit-macros = { path = "../maudit-macros", version = "0.5.0" }
log = { version = "0.4", features = ["kv"] }
env_logger = "0.11.5"
chrono = "0.4.39"
colored = "2.2.0"
rustc-hash = "2.1"
thiserror = "2.0.9"
oxc_sourcemap = "4.1.0"
rayon = "1.11.0"
xxhash-rust = "0.8.15"
